fixing responsive on iphone XE

--- a/css/index.css
+++ b/css/index.css
@@ -257,12 +257,19 @@ details {
     }
   
     .profil_image {
-      margin: 40px 30px 0 0; 
+      margin: 10px 10px 0 0; 
       align-self: flex-start; /* Align the image to the top */
     }
   
     .profil_textContainer {
       flex: 1 1 auto;
+    }
+}
+
+@media screen and (min-width: 375px) {
+    .profil_image {
+      width: 200px;
+      height: 200px;
     }
 }
 /*  */
